# mihoyo-api

./: .editorconfig  .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  User-License.txt  package.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: build.yml
src/: app.ts  main.rs
src/api/: common.rs  genshin.rs  mod.rs
src/data/: global-var.ts  server_region.ts
src/module/: auth.ts  common.ts
src/route/: auth-key.ts  auth-login-mobile.ts  auth-login-verify.ts  auth-login.ts  bbs-sign.ts  my-prayer-history.ts  router.ts  user-info.ts  user-status.ts  ys-sign.ts
src/route/auth/: auth-key.ts  auth-login.ts
src/route/auth/login/: auth-login-mobile.ts  auth-login-verify.ts
src/route/auth/login/qrcode/: qrcode-fetch.ts  qrcode-query.ts
src/routes/: error.rs  genshin.rs  index.rs  mod.rs
src/util/: crypto-util.ts  http.ts  other-util.ts
src/utils/: common.rs  crypto.rs  mod.rs  request.rs  result.rs
